rust/crates/spek/src/data_types/notation/snapshots/spek__data_types__notation__note__tests__test_note_from_strmultiple_accidentals.snap
---
source: crates/spek/src/data_types/notation/note.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:C##
Note { pitch: C, accs: [Sharp, Sharp], octave: None, cents: None }
display:c♯♯
