rust/crates/spek/src/data_types/notation/snapshots/spek__data_types__notation__note__tests__test_note_from_strnote_g.snap
---
source: crates/spek/src/data_types/notation/note.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:G
Note { pitch: G, accs: [], octave: None, cents: None }
display:g
