rust/crates/spek/src/data_types/notation/snapshots/spek__data_types__notation__note__tests__test_note_from_stroctave_negative_two_digit.snap
---
source: crates/spek/src/data_types/notation/note.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:C-10
Note { pitch: C, accs: [], octave: Some(-10), cents: None }
display:c-10
